--- a/lesson4/medium.css
+++ b/lesson4/medium.css
@@ -15,6 +15,11 @@
 /* Tablet Views ******************************/
 
 @media only screen and (min-width: 37.5em) {
+  img {
+    width: 150px;
+    padding-right: 30px;
+  }
+
   footer p {
     color: white;
     font-size: 1.5em;
