--- a/lesson4/medium.css
+++ b/lesson4/medium.css
@@ -15,9 +15,24 @@
 /* Tablet Views ******************************/
 
 @media only screen and (min-width: 37.5em) {
+  body {
+    background-color: white;
+    font-family: arial narrow;
+    max-width: 960px;
+    margin: 0 auto;
+    align-content: center;
+    display:flex; 
+    flex-direction:column; 
+    justify-content:center;
+    min-height:100vh;
+  }
+
   img {
     width: 150px;
     padding-right: 30px;
+    margin-left: 200px;
+    margin-right: 0;
+    padding: 0;
   }
 
   footer p {
