--- a/lesson2/small.css
+++ b/lesson2/small.css
@@ -37,7 +37,7 @@ h2 {
 }
  
 h3 {
-    color: var(--hunter-green);
+  color: var(--hunter-green);
   text-align: center;
   font-family: "PT Sans Narrow", serif;
   font-size: 2.5em;
@@ -48,14 +48,14 @@ h3 {
 a {
     color: var(--fern-green);
     font-family: "PT Sans Narrow", serif;
-    font-size: 1.5em;
+    font-size: 1em;
 }
 
 p {
     color: var(--hunter-green);
     text-align: center;
     font-family: "PT Sans Narrow", serif;
-    font-size: 1.5em;
+    font-size: 1em;
     margin: 0;
     padding: 20px;
 }
@@ -64,22 +64,25 @@ p {
     color: var(--timberwolf);
     text-align: center;
     font-family: "Nanum Myeongjo", serif;
-    font-size: 1em;
+    font-size: .8em;
 }
 
 .footerContent a {
     color: var(--timberwolf);
     font-family: "Nanum Myeongjo", serif;
-    font-size: 1em;
+    font-size: .8em;
 }
 
 img {
     align-items: center;
+    display: grid;
+    width: 100%;
 }
 
 header {
     background-color: var(--brunswick-green);
     height: 150px;
+    border-radius: 15px;
 }
 
 footer {
@@ -99,9 +102,9 @@ main {
 }
 
 main section {
-  margin: 0.5rem;
+  margin: 0;
   border: 1px solid #bbb;
-  padding: 0 3rem;
+  padding: 0 1rem;
   background-color: #eee;
   border-radius: 15px;
 }
@@ -120,11 +123,20 @@ main picture {
     grid-column: span 2;
   }
 
-  main section {
-  }
+  a {
+    font-size: 1.5em;
+}
 
-  main picture {
-  }
+p {
+    font-size: 1.5em;
+}
+
+.footerContent {
+    font-size: 1em;
+}
+
+.footerContent a {
+    font-size: 1em;
 }
 
 /* Desktop Views ******************************/
@@ -132,9 +144,6 @@ main picture {
 
   main {
     grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  main section {
   }
 
   section:nth-child(3) {
