--- a/lesson2/design-principles.css
+++ b/lesson2/design-principles.css
@@ -28,7 +28,7 @@ h1{
 }
 
 h2 {
-    color: var(--timberwolf);
+  color: var(--timberwolf);
   text-align: center;
   font-family: "Nanum Myeongjo", serif;
   font-size: 1.8em;
@@ -37,7 +37,7 @@ h2 {
 }
  
 h3 {
-    color: var(--hunter-green);
+  color: var(--hunter-green);
   text-align: center;
   font-family: "PT Sans Narrow", serif;
   font-size: 2.5em;
@@ -91,14 +91,14 @@ footer p {
     padding-top: 25px;
 }
 
-/* phone or baseline views *******************/
 main {
-  display: grid;
-  grid-template-columns: 1fr;
+  display: block;
   font-size: 0.8rem;
+  max-width: 100%;
 }
 
 main section {
+  display: block;
   margin: 0.5rem;
   border: 1px solid #bbb;
   padding: 0 3rem;
@@ -108,36 +108,16 @@ main section {
 
 main picture {
   margin: 0.5rem;
+  width: 100%;
 }
 
 /* Tablet Views ******************************/
 @media only screen and (min-width: 37.5em) {
   main {
-    grid-template-columns: 1fr 1fr;
-  }
-
-  section:nth-child(3) {
-    grid-column: span 2;
-  }
-
-  main section {
-  }
-
-  main picture {
+    display: flex;
   }
 }
 
 /* Desktop Views ******************************/
-@media only screen and (min-width: 60em){
-
-  main {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-
-  main section {
-  }
-
-  section:nth-child(3) {
-    grid-column: span 1;
-  }
+@media only screen and (min-width: 60em) {
 }
