--- a/lesson4/small.css
+++ b/lesson4/small.css
@@ -24,253 +24,125 @@
 /* phone or baseline views *******************/
 
 h1{
-
   font-size: 3em;
-
+  color: var(--aero-blue);
   font-family: "Nanum Myeongjo";
-
   text-align: center;
-
+  padding-bottom: 0;
+  margin-bottom: 0;
 }
-
- 
 
 h3{
-
   font-size: 1.8em;
-
   font-family: "Nanum Myeongjo";
-
   text-align: center;
-
 }
 
- 
-
-.subheading {
-
-  font-size: 0.8em;
-
+h2 {
+  font-size: 1em;
+  color: white;
   font-family: "Nanum Myeongjo";
-
   text-align: center;
-
+  padding-bottom: 25px;
 }
-
- 
-
- 
 
 img {
-
-  display: block;
-
+  display: flex;
   margin-left: auto;
-
   margin-right: auto;
-
   width: 150px;
-
 }
-
- 
 
 header {
-
   background-color: var(--russian-violet);
-
   padding: 0.8em;
-
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-
- 
-
-nav button {
-
-  margin: .2rem 2%;
-
-  background-color: transparent;
-
-  border: none;
-
-  font-size: 1.6rem;
-
-  color: white;
-
-  display: block;
-
-  position: absolute;
-
-}
-
- 
-
-nav {
-
-  clear: left;
-
-  background-color: var(--amaranth-pink);
-
-  font-family: Georgia, sans-serif;
-
-  overflow: hidden;
-
-}
-
- 
-
-nav ul {
-
-  list-style-type: none;
-
-  padding: 0;
-
-  margin: 0;
-
-}
-
- 
-
-nav ul li a {
-
-  display: block;
-
-  padding: .8rem 2%;
-
-  text-decoration: none;
-
-  color: white;
-
-  border-top: 1px solid  ;
-
-}
-
- 
-
-nav ul li.active {
-
-  background-color: var(--lilac);
-
-  color: white;
-
-}
-
- 
-
-nav ul li a:hover {
-
-  background-color: var(--lilac);
-
-}
-
- 
-
-.fixed:after {
-
-  content: "";
-
-  display: table;
-
-  clear: both;
-
-}
-
- 
 
 .sections {
-
-  display: block;
-
+  display: flex;
   margin: 10 px auto;
-
   border: 1px solid var(--aero-blue) ;
-
   padding: 15px;
-
   background-color: white;
-
   color: black;
-
   font-family: Georgia, sans serif;
-
-  text-align: center;
-
+  align-items: center;
+  justify-content: center;
 }
-
- 
 
 footer {
-
   background-color: var(--russian-violet);
-
   padding: 0.8em;
-
   font-family: Georgia, sans-serif;
-
   font-size: 12px;
-
   text-align: center;
-
 }
 
- 
+footer p {
+  color: white;
+  dont-size: 2em;
+}
 
 footer a {
-
   text-decoration: none;
-
   color: white;
-
 }
-
- 
 
 a:hover {
-
   background-color: var(--lilac);
-
 }
 
- 
 
-nav ul.visibility {
-
-  display: none
-
+.mobile-container {
+  max-width: 100%;
+  margin: auto;
 }
-
- 
 
 .topnav {
-
   overflow: hidden;
-
-  background-color: ;
-
+  background-color: var(--aero-blue);
   position: relative;
-
+  color: black;
+  display: flex;
 }
-
- 
 
 .topnav #myLinks {
-
   display: none;
-
+  width: 100%;
 }
 
- 
-
-.topnav a.icon {
-
-  background: black;
-
-  display: block;
-
-  position: absolute;
-
-  right: 0;
-
-  top: 0;
-
+.topnav ul {
+  list-style-type: none;
 }
+
+.topnav a {
+  color: black;
+  padding: 14px 100%;
+  text-decoration: none;
+  font-size: 1.5em;
+  display: flex;
+  border: 2px solid white;
+  width: 100%;
+  justify-content: center;
+}
+
+.topnav a:hover {
+  background-color: var(--piggy-pink);
+  color: var(--carolina-blue);
+}
+
+.icon {
+  background: transparent;
+  color: black;
+  width: 50px;
+  height: 50px;
+}
+
+.fixed:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
