--- a/lesson4/small.css
+++ b/lesson4/small.css
@@ -51,6 +51,9 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 150px;
+  font-size: 60px;
+  padding-right: 30px;
+  text-shadow: 2px 2px 4px #000000;
 }
 
 header {
