--- a/lesson3/small.css
+++ b/lesson3/small.css
@@ -56,6 +56,11 @@ img {
   text-shadow: 2px 2px 4px #000000;
 }
 
+.logo {
+  height: 300px;
+  width: 80%;
+}
+
 header {
   background-color: var(--russian-violet);
   padding: 0.8em;
@@ -65,15 +70,14 @@ header {
 }
 
 .sections {
-  display: flex;
+  display: block;
   margin: 10 px auto;
   border: 1px solid var(--aero-blue) ;
   padding: 15px;
   background-color: white;
   color: black;
   font-family: Georgia, sans serif;
-  align-items: center;
-  justify-content: center;
+  align-content: center;
 }
 
 footer {
