--- a/lesson7/CSS/small.css
+++ b/lesson7/CSS/small.css
@@ -1,6 +1,6 @@
 body {
     font-size: 16px;
-    font-family: "Libre Baskerville", serif;
+    font-family: "Georgia", serif;
   }
   
   header,
@@ -13,8 +13,6 @@ body {
   
   header {
     color: #EAE6EF;
-    /* display: flex;
-    flex-flow: column; */
     align-items: center;
     justify-content: center;
     padding-top: 10px;
@@ -28,25 +26,28 @@ body {
   
   header img {
     width: 80px;
-    height: auto;
     float: left;
-    padding-right: 5%;
-    padding-left: 2%;
+    padding-top: 25px;
   }
   
   section.headings1 {
     text-align: center;
-    margin-top: -15px;
+    margin-top: 10px;
+    height: 35px;
   }
   
   .headings1 {
     font-size: 1.2rem;
+    text-align: center;
   }
-  
+
   div.headings2 {
     text-align: center;
     font-size: 0.6rem;
-    margin-top: -50px;
+    margin-top: 0px;
+    padding-top: 1px;
+    padding-bottom: 20px;
+    color: white;
   }
   
   h1,
@@ -72,7 +73,9 @@ body {
   
   .headertitle {
     color: #5AA0D6;
+    padding: 5px;
   }
+
   nav {
     background-color: #C7EFCF;
   }
