--- a/lesson7/CSS/small.css
+++ b/lesson7/CSS/small.css
@@ -112,17 +112,20 @@ nav ul.hide {
   padding: 5px;
 }
 
+.header-title .hero-header {
+  position: absolute;
+}
+
 main picture.hero { 
+  width: 100%;
   position: relative;
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
   margin: 30px auto; 
 }
 
 .hero-image {
   max-width: 100%;
-  margin: 0 auto;  
+  margin: 0 auto; 
 }
 
 main {
@@ -248,6 +251,11 @@ h3#weather_summary {
   grid-column-gap: 1.5rem;
 }
 
+.header-title {
+  position: absolute;
+  text-align: justify;
+}
+
 h2.city {
   padding-top: 20px;
 }
@@ -271,7 +279,7 @@ div#five_day {
   clear: both;
 }
 
-/*Form*/
+/******************Form*********************/
 
 h1.h1sc {
   font-size: 2.2rem;
@@ -448,4 +456,95 @@ tfoot tr {
 .focus {
   background-color: rgb(77, 129, 168);
   color: white;
+}
+
+/***************Homepage Town Info*************/
+
+html {
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+* { 
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+article {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+article:nth-child(odd) img {
+  grid-column: 1;
+}
+
+article:nth-child(odd) .data {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.cards{
+  display: grid;
+  grid-template-columns: repeat(auto-fill,minmax(220px, 1fr));
+  max-width: 100%;
+  grid-gap: 5px;
+  margin: 5px;
+  grid-template-rows: repeat(auto-fill,minmax(200px, 1fr));   
+}
+
+.cards article{
+  display: block;
+  margin: 15px;
+  background: #EAE6EF;
+  border: 1px solid #eae0ef;
+  min-height: 250px;
+  border-radius: 10px;
+  box-shadow: 0 20px 25px -5px #999, 0 10px 10px -5px #999;
+}
+
+.tInfo{
+  padding: 8px; 
+}
+
+.tName{
+  font-size: 1.7rem;
+  margin-bottom: 8px;
+}
+
+.tMoto{
+  margin: 0 auto 20px auto;
+}
+
+.cards img{
+  width: 100%;
+  height: 250px;
+  border-radius: 10px;
+  margin: auto;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.homepage-article {
+  position: relative;
+  text-align: left;
+  max-width: 100%;
+  margin: auto;
+}
+
+.frame {
+  text-align: center;
+  margin: auto;
+}
+
+.clear{
+  clear: right;
 }
